name:                nagios-perfdata
version:             0.4.0
synopsis:            Parse Nagios performance data.
description:         Provides an interface for parsing Nagios
                     performance data formatted according to the plugin
                     development guidelines.
homepage:            https://github.com/anchor/nagios-perfdata
license:             BSD3
license-file:        LICENSE
author:              Sharif Olorin, Martin Heuschober
maintainer:          sio@tesser.org
copyright:           2014 Anchor Systems
category:            Data
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
stability:           experimental
tested-with:         GHC == 7.8.3
           ,         GHC == 8.0.2

source-repository    head
  type:              git
  location:          git@github.com:epsilonhalbe/nagios-perfdata.git

library
  exposed-modules:   Data.Nagios.Perfdata
                 ,   Data.Nagios.Perfdata.Metric
                 ,   Data.Nagios.Perfdata.Error
                 ,   Data.Nagios.Perfdata.GearmanResult
                 ,   Data.Nagios.Perfdata.Template
  build-depends:     base >=4.5 && <= 5
               ,     attoparsec
               ,     bifunctors
               ,     bytestring
               ,     containers
               ,     lens
               ,     mtl
               ,     safe
               ,     strict
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           perfdata-test
  hs-source-dirs:    tests
  main-is:           Perfdata.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=4.5 && <= 5
               ,     nagios-perfdata
               ,     attoparsec
               ,     bytestring
               ,     hspec
               ,     HUnit
               ,     MissingH
               ,     transformers

  ghc-options:       -Wall
                     -Wwarn
                     -fwarn-tabs
